Handle delete expense

--- a/src/app/components/expense-item/expense-item.component.html
+++ b/src/app/components/expense-item/expense-item.component.html
@@ -5,6 +5,10 @@
     }@else {
     {{ expense.amount }}
     } €
-    <fa-icon [styles]="{ color: 'red' }" [icon]="faTimes" />
+    <fa-icon
+      (click)="onDelete(expense)"
+      [styles]="{ color: 'red' }"
+      [icon]="faTimes"
+    />
   </p>
 </div>
