Handle expense/income toggle

--- a/src/app/components/expense-item/expense-item.component.html
+++ b/src/app/components/expense-item/expense-item.component.html
@@ -1,4 +1,8 @@
-<div class="expense">
+<div
+  class="expense"
+  [class.income]="!expense.expense"
+  (dblclick)="onToggle(expense)"
+>
   <h3>{{ expense.description }}</h3>
   <p>
     @if(expense.expense) { -{{ expense.amount }}
