--- a/src/app/components/expense-item/expense-item.component.css
+++ b/src/app/components/expense-item/expense-item.component.css
@@ -1,5 +1,5 @@
 .expense {
-  background: #f4f4f4;
+  background: #ffcbd0;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
@@ -9,8 +9,9 @@
 }
 
 .expense.income {
-  border-left: 5px solid green;
+  background: #e0ffd2;
 }
+
 
 .expense h3 {
   display: flex;
