Handle add expense

--- a/src/app/components/expenses/expenses.component.html
+++ b/src/app/components/expenses/expenses.component.html
@@ -1,3 +1,5 @@
+<app-add-expense (onAddExpense)="addExpense($event)" />
+
 @for (expense of expenses; track expense.id) {
 <app-expense-item
   [expense]="expense"
