--- a/src/app/components/expense-item/expense-item.component.html
+++ b/src/app/components/expense-item/expense-item.component.html
@@ -5,9 +5,9 @@
 >
   <h3>{{ expense.description }}</h3>
   <p>
-    @if(expense.expense) { -{{ expense.amount }}
+    @if(expense.expense) { -{{ expense.amount.toFixed(2) }}
     }@else {
-    {{ expense.amount }}
+    {{ expense.amount.toFixed(2) }}
     } €
     <fa-icon
       (click)="onDelete(expense)"
